--- a/EmailTemplates/Views/Home/Index.cshtml
+++ b/EmailTemplates/Views/Home/Index.cshtml
@@ -47,20 +47,6 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <div class="row mt-3">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-header">
-                                    Assunto
-                                </div>
-                                <div class="card-body">
-                                    @*<input asp-for="Assunto" type="text" class="form-control-sm w-100" />*@
-                                    <div id="Assunto"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="row mt-3">
                         <div class="col-12">
@@ -88,6 +74,20 @@
                         <div class="col-12">
                             <div class="card">
                                 <div class="card-header">
+                                    Assunto
+                                </div>
+                                <div class="card-body">
+                                    @*<input asp-for="Assunto" type="text" class="form-control-sm w-100" />*@
+                                    <div id="Assunto"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-header">
                                     <div class="card-header-title d-inline-block">Conteúdo</div>
                                 </div>
                                 <div class="card-body">
@@ -103,7 +103,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-12 text-center">
-                    <button id="Enviar" name="Enviar" class="btn btn-primary">Enviar E-mail</button>
+                    <button type="button" id="Enviar" name="Enviar" class="btn btn-primary">Enviar E-mail</button>
                 </div>
             </div>
         </form>
@@ -134,16 +134,6 @@
             display: inline-block;
             width: 10px;
             margin-left: 5px;
-        }
-
-        #Conteudo {
-            height: 300px;
-        }
-
-        @@media (min-width: 768px) {
-            #Conteudo {
-                height: calc(100vh - 162px);
-            }
         }
 
         .text-mail-variables {
@@ -315,6 +305,47 @@
                         //    $("#DestinatarioIds").append(option);
                         //});
                     });
+            });
+
+            $("#Enviar").on("click", (evt) => {
+
+                let link = "mailto:";
+                
+                let toRecipient = $(".mail-recipients").find(".recipient-type[data-value='To']");
+                if (toRecipient.length == 0) {
+                    alert("É necessário ter o \"To\" preenchido para poder enviar o e-mail");
+                    return;
+                }
+
+                toRecipient.parent().find(".recipient-address").each((index, el) => link += (index > 0 ? "," + $(el).text() : $(el).text()));
+                link += "?";
+
+                let ccRecipient = $(".mail-recipients").find(".recipient-type[data-value='Cc']");
+                if (ccRecipient.length > 0) {
+                    link += "&cc=";
+                    ccRecipient.parent().find(".recipient-address").each((index, el) => link += (index > 0 ? "," + $(el).text() : $(el).text()));
+                }
+
+                let bccRecipient = $(".mail-recipients").find(".recipient-type[data-value='Bcc']");
+                if (ccRecipient.length > 0) {
+                    link += "&bcc=";
+                    bccRecipient.parent().find(".recipient-address").each((index, el) => link += (index > 0 ? "," + $(el).text() : $(el).text()));
+                }
+
+                let subject = $("#Assunto").text();
+                if (subject != "")
+                {
+                    link += "&subject=" + subject;
+                }
+
+                let body = $("#Conteudo").html();
+                if (body != "") {
+                    link += "&body=" + body.replaceAll("<br>", "%0A");
+                }
+
+                console.log(link);
+                $("<a>").attr("target", "_blank").attr("href", link)[0].click()
+                
             });
         });
     </script>
